# excel2web

./: .gitignore  README.md  pyproject.toml
excel2web/: cli.py  excel.py  rag.py  yakka.py
excel2web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_extract_price.py  test_rag_index.py
